kleine opkuis + testen + async aanzetten zodat de notificaties async gebeure