@@ -18,21 +18,21 @@ public class ChatRoom {
     private String title;
     private final List<UUID> members;
     private final List<Message> messages;
-    
+
     private static final int maxMembers = 10;
-    
+
 
     public ChatRoom(ChatRoomId id, String title, List<UUID> members, List<Message> messages) {
         this.id = id;
         setTitle(title);
         this.members = members;
-        this.messages = messages.stream().sorted(Comparator.comparing(Message::timestamp)).collect(Collectors.toList());
+        this.messages = messages.stream().sorted(Comparator.comparing(Message::getTimestamp)).collect(Collectors.toList());
     }
 
-    public ChatRoom() { 
+    public ChatRoom() {
         this(new ChatRoomId(UUID.randomUUID()), "", new ArrayList<>(), new ArrayList<>());
     }
-    
+
     public ChatRoom(String title) {
         this(new ChatRoomId(UUID.randomUUID()), title, new ArrayList<>(), new ArrayList<>());
     }
@@ -50,10 +50,10 @@ public class ChatRoom {
     public void addMembers(List<UUID> memberIds) {
         if (members == null)
             throw new IllegalArgumentException("Member list is null");
-        
+
         if (memberIds.contains(null))
             throw new IllegalArgumentException("Member list containers null members");
-        
+
         if (members.size() + memberIds.size() > maxMembers)
             throw new AccessDeniedException("Cannot add more than " + maxMembers + " members");
 
@@ -66,7 +66,6 @@ public class ChatRoom {
         if (message == null)
             throw new IllegalArgumentException("Message is null");
         messages.add(message);
-        messages.sort(Comparator.comparing(Message::timestamp));
     }
 
     public static void validateProfiles(List<String> allTags, List<String> foundTags) {
@@ -87,10 +86,12 @@ public class ChatRoom {
         if (!members.contains(profileId))
             throw new AccessDeniedException("You are not a member of this chat");
     }
-    
+
     private void setTitle(String title) {
-        if (title == null || title.trim().isEmpty())
+        if (title == null || title.isBlank())
             throw new IllegalArgumentException("Title is null or empty");
+        if (title.length() > 100)
+            throw new IllegalArgumentException("Title is too long");
         this.title = title;
     }
 }
